--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ DB_NAME=restaurant_db
 JWT_SECRET_KEY=your_jwt_secret_key
 JWT_ACCESS_TOKEN_EXPIRES_MINUTES=30
 JWT_REFRESH_TOKEN_EXPIRES_DAYS=7
+
+DEFAULT_USER=default_user
+DEFAULT_PASSWORD=default_password
