--- a/.env.example
+++ b/.env.example
@@ -10,5 +10,6 @@ JWT_SECRET_KEY=your_jwt_secret_key
 JWT_ACCESS_TOKEN_EXPIRES_MINUTES=30
 JWT_REFRESH_TOKEN_EXPIRES_DAYS=7
 
+# Default user
 DEFAULT_USER=default_user
 DEFAULT_PASSWORD=default_password
