--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 # Database configuration
-DB_HOST_IP=172.21.186.154
-DB_PORT=3306
-DB_USER=root
-DB_PASSWORD=your_db_password
-DB_NAME=restaurant_db
+db_host_ip=172.21.186.154
+db_port=3306
+db_user=root
+db_password=your_db_password
+db_name=restaurant_db
 
 # JWT configuration
 JWT_SECRET_KEY=your_jwt_secret_key
